--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <p><strong>Moderation:</strong> User content is automatically and manually reviewed to detect and remove harmful or inappropriate material.</p>
       <p><strong>Reporting:</strong> Users can easily report inappropriate content or behavior. All reports are reviewed and escalated when necessary.</p>
       <p><strong>Cooperation with Authorities:</strong> We report all confirmed cases of CSAM (Child Sexual Abuse Material) to regional and national authorities in accordance with the law.</p>
-      <p><strong>Contact:</strong> For child safety concerns, contact us at <a href="mailto:urajpatel12@gmail.com">urajpatel12@gmail.com</a></p>
+      <p><strong>Contact:</strong> For child safety concerns, contact us at <a href="mailto:mate.connects@gmail.com">urajpatel12@gmail.com</a></p>
     </section>
   </main>
 
